--- a/bgee-webapp/src/main/webapp/css/documentation.css
+++ b/bgee-webapp/src/main/webapp/css/documentation.css
@@ -1,21 +1,24 @@
 div.documentationsubsection, div.documentationmenu {
     position: relative;
     display: inline-block;
-    width: 95%;
 }
 
 div.documentationsubsection {
     text-align: left;
-	padding: 0.5%;
-	border-top: 2px #920209 solid;
+    border-top: 2px #920209 solid;
+    padding: 1%;
+    margin: 0;
+    width: 98%;
 }
 
-div.documentationsubsection p {
+div.subsectiontext p {
     margin: 1% 0;
 }
 
 div.documentationmenu {
     text-align: center;
+    width: 100%;
+    margin-bottom: 2%;
 }
 
 div.documentationmenu ul {
@@ -34,14 +37,14 @@ div.documentationmenu li {
 }
 
 #sib_body h1 {
-	text-align: center;
-	width: 95%;
+    text-align: center;
+    width: 100%;
     font-size: 2em;
 }
 
 #sib_body h2 {
     font-size: 1.6em;
-    margin: 2% 0 0 0;
+    margin: 1em 0 0 0;
 }
 
 #sib_body h3 {
@@ -49,7 +52,8 @@ div.documentationmenu li {
     margin: 1% 0 0 0;
 }
 
-.backlink {
-	color: #626262;
-	margin-left: 2%;
+a.backlink {
+    color: #626262;
+    float: right;
+    margin-top: 2em;
 }
